Fix/material/docs): Add whitespace

--- a/src/app/shared/navbar/navbar.scss
+++ b/src/app/shared/navbar/navbar.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   align-items: center;
   padding: 8px 16px;
+  gap: 8px;
 
   > .mat-mdc-button {
     &:last-child {
